# DataBoardGame

./: README.md  pyproject.toml
.github/workflows/: tests.yml
DataBoardGame/: board.py  card.py  game.py  gamelearning.py  globalvars.py  resources.py  utils.py
notebooks/: game.ipynb
tests/: test_card.py  test_gamelearning.py  test_resources.py
