[tool.poetry]
name = "databoardgame"
version = "0.0.1"
description = "Data Board Game"
authors = [
    "Evgeny Ermakov <jk.ermakov@gmail.com>",
]
readme = "README.md"
license = "GNU General"
homepage = "https://github.com/iJKos/DataBoardGame"
repository = "https://github.com/Toloka/DataBoardGame"
documentation = "https://github.com/Toloka/DataBoardGame/README.md"
keywords = ["python", "data", "board", "game"]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
attrs = "^23.1"
pydantic = ">=1.10,<3.0.0"


pytest = { version = "*", optional = true }
pytest-env = { version = "*", optional = true }
pytest-socket = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pendulum = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3"
pytest = "^8"
pytest-env = "*"
pytest-cov = "~4.1"
pytest-socket = "*"
pytest-mock = "*"
pre-commit = "3.6.2"
ipython = "^8"
ipykernel = "^6.29.5"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://beta.ruff.rs/docs
line-length = 160
lint.select = [
    # https://beta.ruff.rs/docs/rules
    "F", # pyflakes
    "E", # pycodestyle (errors)
    "W", # pycodestyle (warnings) eg. trailing/leading whitespaces
    "Q", # quotes
    "I001", # unsorted imports (isort)
    "TID", # tidy-imports
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
# https://beta.ruff.rs/docs/settings/#isort

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
